<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundbordo"
    android:padding="@dimen/cardLayoutPadding">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundmavi">

            <ImageView
                android:id="@+id/imgMarkaLogo"
                android:layout_width="@dimen/cardMarkaLogoWidth"
                android:layout_height="@dimen/cardMarkaLogoHeight"
                android:layout_marginStart="@dimen/cardMarkaLogoMarginStart"
                android:layout_marginTop="@dimen/cardMarkaLogoMarginTop"
                android:layout_marginBottom="@dimen/cardMarkaLogoMarginBottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtMarkaAdi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cardMarkaAdiMarginStart"
                android:textColor="@color/black"
                android:textSize="@dimen/cardMarkaAdiTextSize"
                app:layout_constraintStart_toEndOf="@+id/imgMarkaLogo"
                app:layout_constraintTop_toTopOf="@+id/imgMarkaLogo"
                tools:text="@string/turkhavayollari" />

            <TextView
                android:id="@+id/txtKurulusTarihi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardKurulusTarihiMarginTop"
                android:textColor="@color/black"
                android:textSize="@dimen/cardKurulusTarihiTextSize"
                app:layout_constraintStart_toStartOf="@+id/txtMarkaAdi"
                app:layout_constraintTop_toBottomOf="@+id/txtMarkaAdi"
                tools:text="@string/kurulustarih" />

            <TextView
                android:id="@+id/txtDegeri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardDegeriMarginTop"
                android:textColor="@color/black"
                android:textSize="@dimen/cardDegeriTextSize"
                app:layout_constraintStart_toStartOf="@+id/txtMarkaAdi"
                app:layout_constraintTop_toBottomOf="@+id/txtKurulusTarihi"
                tools:text="@string/deger" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>